--- a/html/index1.html
+++ b/html/index1.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
+    <script src="../js/index.js"></script>
     <title>Main Page</title>
 </head>
 <body>
@@ -12,12 +13,12 @@
         <nav>
             <ul>
                 <li><a href="index1.html">Home</a></li>
-                <li><a href="template2.html">Gallery</a> </li>
-                <li><a href="abt.html">About Page</a></li>
+                <li><a href="index2.html">Gallery</a> </li>
+                <li><a href="index3.html">About Page</a></li>
             </ul>
         </nav>
     </header>
-    <main>
+    <main id="main-page">
         <h1> MAIN CONTENT </h1>
         <br> <br> <br> <br><br><br><br> <br><br><br>
         <p> CONTENT
