--- a/html/index3.html
+++ b/html/index3.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
+    <script src="../js/index.js"></script>
     <title>About Page</title>
 </head>
 <body>
@@ -12,14 +13,16 @@
         <nav>
             <ul>
                 <li><a href="index1.html">Home</a></li>
-                <li><a href="template2.html">Gallery</a> </li>
-                <li><a href="abt.html">About Page</a></li>
+                <li><a href="index2.html">Gallery</a> </li>
+                <li><a href="index3.html">About Page</a></li>
             </ul>
         </nav>
     </header>
-    <main>
+    <main id="about-us">
         <h1>ABOUT US</h1>
-        <p></p>
+        <br><br><br><br><br>
+        <p>CONTENT</p>
+        <br><br><br><br><br>
     </main>
     <footer>
         <div>
