--- a/html/index3.html
+++ b/html/index3.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index1.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="index2.html">Gallery</a> </li>
                 <li><a href="index3.html">About Page</a></li>
             </ul>
