--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../Web-Project 166/css/styles.css">
     <script src="../Web-Project 166/js/index.js"></script>
     <title>Main Page</title>
 </head>
@@ -13,8 +13,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="../Web-Project 166/html/index2.html">Gallery</a> </li>
-                <li><a href="../Web-Project 166/html/index3.html">About Page</a></li>
+                <li><a href="index2.html">Gallery</a> </li>
+                <li><a href="index3.html">About Page</a></li>
             </ul>
         </nav>
     </header>
