--- a/index2.html
+++ b/index2.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Web-Project 166/css/styles.css">
-    <script src="../Web-Project 166/js/index.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
     <title>Gallery</title>
 </head>
 <body>
@@ -20,16 +19,13 @@
     </header>
     <main>
         <h1 id="header1">Gallery</h1>
-        <div id="container-gallery">
+        <div id="containergallery">
             <div id="gallery">
-                <div class="pic"><img width="400px" height="300px" src="../Web-Project 166/img/Aussie_puppy_tricolour.jpg" alt="Picture of Puppies" onclick="myPhotosFunction(this)"></div>
-                <div class="pic"><img width="400px" height="500px" src="../Web-Project 166/img/brownPuppy.jpeg" alt="Picture of Puppies" onclick="myPhotosFunction(this)"></div>
-                <div class="pic"><img width="400px" height="500px" src="../Web-Project 166/img/JumpPuppy.jpg" alt="Picture of Puppies" onclick="myPhotosFunction(this)"></div>
-                <div class="pic"><img width="400px" height="350px" src="../Web-Project 166/img/TanPuppy.jpg" alt="Picture of Puppies" onclick="myPhotosFunction(this)"></div>
-                <div class="pic"><img width="400px" height="320px" src="../Web-Project 166/img/twoPuppies.jpg" alt="Picture of Puppies" onclick="myPhotosFunction(this)"></div>
-            </div>
-            <div id="lightbox">
-                <img id="img-lightbox" width="400px" height="300px" src="../Web-Project 166/img/Aussie_puppy_tricolour.jpg" alt="Picture of Puppies">
+                <div class="pic"><img width="400px" height="400px" src="img/Aussie_puppy_tricolour.jpg" alt="Picture of Puppies"></div>
+                <div class="pic"><img width="400px" height="400px" src="img/brownPuppy.jpeg" alt="Picture of Puppies"></div>
+                <div class="pic"><img width="400px" height="400px" src="img/JumpPuppy.jpg" alt="Picture of Puppies"></div>
+                <div class="pic"><img width="400px" height="400px" src="img/TanPuppy.jpg" alt="Picture of Puppies"></div>
+                <div class="pic"><img width="400px" height="400px" src="img/twoPuppies.jpg" alt="Picture of Puppies"></div>
             </div>
         </div>
     </main>
@@ -40,5 +36,6 @@
             <h3>PHONE # </h3>
         </div>
     </footer>
+    <script src="js/index.js"></script>
 </body>
 </html>
