--- a/index2.html
+++ b/index2.html
@@ -14,6 +14,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index2.html">Gallery</a> </li>
                 <li><a href="index3.html">About Page</a></li>
+                <li><a href="index4.html">Log In</a></li>
             </ul>
         </nav>
     </header>
@@ -31,11 +32,10 @@
     </main>
     <footer>
         <div>
-            <h1>CONTACT INFO</h1>
+            <h2>CONTACT INFO</h2>
             <h3>EMAIL</h3>
-            <h3>PHONE # </h3>
         </div>
     </footer>
-    <script src="js/index.js"></script>
+    <script src="js/index2.js"></script>
 </body>
 </html>
