--- a/index3.html
+++ b/index3.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="../Web-Project 166/js/index.js"></script>
+    <link rel="stylesheet" href="css/aboutus.css">
     <title>About Page</title>
 </head>
 <body>
@@ -15,21 +14,49 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index2.html">Gallery</a> </li>
                 <li><a href="index3.html">About Page</a></li>
+                <li><a href="index4.html">Log In</a></li>
             </ul>
         </nav>
     </header>
     <main id="about-us">
         <h1>ABOUT US</h1>
-        <br><br><br><br><br>
-        <p>CONTENT</p>
-        <br><br><br><br><br>
+        <article>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pretium aenean pharetra magna ac. Ipsum nunc aliquet bibendum enim facilisis gravida neque convallis a.</p> <br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Euismod elementum nisi quis eleifend quam adipiscing vitae. Cursus vitae congue mauris rhoncus aenean vel elit. Posuere lorem ipsum dolor sit amet consectetur adipiscing elit duis. In hac habitasse platea dictumst vestibulum rhoncus est. Viverra vitae congue eu consequat ac. Eget aliquet nibh praesent tristique magna sit. At in tellus integer feugiat scelerisque varius morbi.</p>
+        </article>
+        <div><img src="/img/chihuahua-dog-puppy.jpg" alt="White Chihuahua"></div>
+        <article>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed augue lacus viverra vitae congue eu consequat. Fusce ut placerat orci nulla pellentesque dignissim enim. Facilisi cras fermentum odio eu feugiat. Eget arcu dictum varius duis. Ornare quam viverra orci sagittis eu volutpat odio facilisis. Tellus cras adipiscing enim eu turpis egestas. Venenatis tellus in metus vulputate eu scelerisque felis. Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam. Sem integer vitae justo eget magna fermentum iaculis eu non. Magna sit amet purus gravida quis blandit turpis. Diam quam nulla porttitor massa id. Faucibus nisl tincidunt eget nullam non.
+                <br>
+                Neque gravida in fermentum et sollicitudin. Suspendisse ultrices gravida dictum fusce ut placerat orci. Elementum pulvinar etiam non quam lacus suspendisse faucibus interdum posuere. At elementum eu facilisis sed odio. Tellus cras adipiscing enim eu turpis egestas pretium. Semper auctor neque vitae tempus quam pellentesque. Scelerisque felis imperdiet proin fermentum leo vel orci. Eget gravida cum sociis natoque penatibus. Lobortis scelerisque fermentum dui faucibus in ornare quam viverra orci. Cursus in hac habitasse platea dictumst quisque sagittis purus sit. Faucibus interdum posuere lorem ipsum dolor sit. Porttitor massa id neque aliquam vestibulum morbi blandit cursus risus. Sed augue lacus viverra vitae congue. Venenatis cras sed felis eget velit aliquet. Proin libero nunc consequat interdum. Netus et malesuada fames ac.
+                <br>
+                Et malesuada fames ac turpis egestas. Eu feugiat pretium nibh ipsum consequat nisl vel pretium lectus. Eu turpis egestas pretium aenean pharetra magna ac placerat vestibulum. Est lorem ipsum dolor sit amet consectetur adipiscing elit. Neque volutpat ac tincidunt vitae. Etiam tempor orci eu lobortis elementum nibh tellus molestie nunc. Dui nunc mattis enim ut tellus elementum sagittis vitae et. Lacus luctus accumsan tortor posuere. Ut lectus arcu bibendum at varius. Faucibus purus in massa tempor nec feugiat nisl pretium. Mauris cursus mattis molestie a. Pretium aenean pharetra magna ac placerat vestibulum. Eget nulla facilisi etiam dignissim.
+            </p> <br>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis ut diam quam nulla porttitor massa. Eros in cursus turpis massa tincidunt dui ut ornare. Morbi enim nunc faucibus a pellentesque sit. Diam quis enim lobortis scelerisque fermentum dui faucibus in. Accumsan lacus vel facilisis volutpat est. Risus pretium quam vulputate dignissim suspendisse in. Tincidunt lobortis feugiat vivamus at augue eget. Metus vulputate eu scelerisque felis imperdiet. Duis at tellus at urna condimentum mattis. Eu consequat ac felis donec et odio. Habitant morbi tristique senectus et netus et. Nunc eget lorem dolor sed viverra ipsum. A scelerisque purus semper eget. Sapien et ligula ullamcorper malesuada proin libero.
+                <br>
+                Diam sit amet nisl suscipit adipiscing bibendum est ultricies. Porta non pulvinar neque laoreet. Volutpat consequat mauris nunc congue. Cras fermentum odio eu feugiat pretium nibh ipsum consequat nisl. Phasellus egestas tellus rutrum tellus pellentesque eu tincidunt. Nullam non nisi est sit amet facilisis. Risus viverra adipiscing at in tellus. Felis bibendum ut tristique et egestas. Dui id ornare arcu odio ut. Porttitor leo a diam sollicitudin tempor id eu nisl. Ut etiam sit amet nisl purus in. Neque vitae tempus quam pellentesque nec. Imperdiet nulla malesuada pellentesque elit eget gravida. Pellentesque id nibh tortor id aliquet. Nam aliquam sem et tortor consequat id porta nibh venenatis. Dictum at tempor commodo ullamcorper a lacus. Orci eu lobortis elementum nibh tellus molestie. Non curabitur gravida arcu ac tortor dignissim convallis.
+            </p> <br>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Consequat mauris nunc congue nisi. Cras tincidunt lobortis feugiat vivamus at augue. Purus faucibus ornare suspendisse sed nisi lacus. Et tortor consequat id porta nibh. Volutpat odio facilisis mauris sit. Placerat vestibulum lectus mauris ultrices eros in cursus. Adipiscing commodo elit at imperdiet dui accumsan sit. Non odio euismod lacinia at quis risus sed vulputate. Et egestas quis ipsum suspendisse ultrices gravida dictum fusce.
+                <br>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nibh sit amet commodo nulla facilisi nullam vehicula. Diam quis enim lobortis scelerisque fermentum dui faucibus in. Dictumst quisque sagittis purus sit amet volutpat consequat mauris. Dolor sit amet consectetur adipiscing elit ut aliquam purus sit.
+            </p> <br>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Orci eu lobortis elementum nibh tellus molestie. Lectus proin nibh nisl condimentum id venenatis. <br>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque habitant morbi tristique senectus et netus. Enim nunc faucibus a pellentesque sit. Semper feugiat nibh sed pulvinar. Porttitor leo a diam sollicitudin tempor id eu nisl nunc. Volutpat odio facilisis mauris sit amet massa vitae. Lectus nulla at volutpat diam ut. Ut porttitor leo a diam sollicitudin tempor id eu. Libero nunc consequat interdum varius sit amet. Fusce id velit ut tortor pretium viverra. Senectus et netus et malesuada fames ac turpis egestas integer. Adipiscing tristique risus nec feugiat in fermentum posuere urna. Eu sem integer vitae justo. Faucibus interdum posuere lorem ipsum dolor. Vel quam elementum pulvinar etiam. Facilisis volutpat est velit egestas dui id ornare arcu odio. Aenean vel elit scelerisque mauris pellentesque. <br>
+                Elit ullamcorper dignissim cras tincidunt lobortis. Ultricies mi quis hendrerit dolor magna eget. Hendrerit gravida rutrum quisque non tellus orci ac. Non nisi est sit amet facilisis magna etiam tempor. Feugiat sed lectus vestibulum mattis ullamcorper velit. Parturient montes nascetur ridiculus mus mauris vitae ultricies. Tincidunt arcu non sodales neque sodales ut etiam sit amet. Eget nullam non nisi est sit. Sit amet tellus cras adipiscing enim eu. Dictum non consectetur a erat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames. Senectus et netus et malesuada fames ac. Eros in cursus turpis massa tincidunt. In iaculis nunc sed augue lacus. Massa sed elementum tempus egestas sed sed risus.
+            </p>
+        </article>
+        <button type="button" id="scrollup" onclick="scrollToTop()">Back Up</button>
     </main>
     <footer>
         <div>
-            <h1>CONTACT INFO</h1>
+            <h2>CONTACT INFO</h2>
             <h3>EMAIL</h3>
-            <h3>PHONE # </h3>
         </div>
     </footer>
+    <script src="js/index3.js"></script>
 </body>
 </html>
