--- a/index4.html
+++ b/index4.html
@@ -18,24 +18,29 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <form action="">
-            <label for="fname">First Name:</label> <br>
-            <input type="text" id="fname" name="fname"> <br>
-            <label for="lname">Last Name:</label> <br>
-            <input type="text" id="lname" name="lname"> <br>
-            <label for="number">Phone Number:</label><br>
-            <input type="tel" name="number" id="number" pattern="[0-9]{3}/[0-9]{3}/[0-9]{4}" size="12" minlength="10" maxlength="12" required> <br>
-            <label for="zipcode">Zip Code:</label> <br>
-            <input type="number" id="zipcode">
+    <main id="Lform">
+        <form action="https://sheetdb.io/api/v1/w6birtt9y44g5" method="post" id="login">
+            <label for="fname">First Name:</label>
+            <input type="text" id="fname" name="fname" required>
+            <label for="lname">Last Name:</label>
+            <input type="text" id="lname" name="lname" required>
+            <label for="number">Phone Number:</label>
+            <input type="tel" name="number" id="number" pattern="[0-9]{3}/[0-9]{3}/[0-9]{4}" size="12" minlength="10" maxlength="12" required>
+            <label for="zipcode">Zip Code:</label>
+            <input type="text" id="zipcode" name="zipcode" minlength="5" maxlength="10" inputmode="numeric" pattern="[0-9]*" required>
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required> <br>
+            <button type="submit" id="submit-button">Submit</button>
         </form>
     </main>
     <footer>
         <div>
-            <h2>CONTACT INFO</h2>
-            <h3>EMAIL</h3>
+            <h2>Contact Info</h2>
+            <h3>Email</h3>
         </div>
     </footer>
-    <script src=""></script>
+    <script src="js/index4.js"></script>
 </body>
 </html>
